--- a/Project React/package.json
+++ b/Project React/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2"
   },
