--- a/Project React/package.json
+++ b/Project React/package.json
@@ -16,6 +16,8 @@
     "react-data-table-component": "^7.6.2",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-dropdown": "^1.11.0",
+    "react-modal-tezuka": "^0.1.2",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
